z-index issue fix

--- a/client/src/components/Starfield/index.module.scss
+++ b/client/src/components/Starfield/index.module.scss
@@ -6,6 +6,7 @@
     top: 55px;
     left: 0;
     pointer-events: none;
+    z-index: 5;
     // background: url(/src/assets/bg/bg-smoke2.jpg) no-repeat 60% -55px;
     // border: 1px solid #fff;
     // // TODO: come back to this
